[gd_scene load_steps=9 format=2]

[ext_resource path="res://Controllable/Player.gd" type="Script" id=1]
[ext_resource path="res://Materials/M_PostProcess_WaterTransitionPass.tres" type="Material" id=2]
[ext_resource path="res://Controllable/RenderTargetPlane.tres" type="QuadMesh" id=3]
[ext_resource path="res://Materials/SHD_PostProcess_WaterDepthPass.gdshader" type="Shader" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 1.75

[sub_resource type="CapsuleMesh" id=2]
radius = 0.75
mid_height = 1.75

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.203922, 0.882353, 0.337255, 1 )
emission_enabled = true
emission = Color( 0.105882, 0.360784, 0.145098, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cull_mask = 950271
near = 0.35
far = 1000.0

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="WaterTransitionPass_Viewport" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
render_target_clear_mode = 2
render_target_update_mode = 3
gui_disable_input = true
shadow_atlas_quad_0 = 0
shadow_atlas_quad_1 = 0
shadow_atlas_quad_2 = 0
shadow_atlas_quad_3 = 0

[node name="WaterTransitionPass_Camera" type="Camera" parent="WaterTransitionPass_Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cull_mask = 32768
near = 0.35
far = 1.0

[node name="WaterTransitionPass_RT" type="MeshInstance" parent="WaterTransitionPass_Viewport/WaterTransitionPass_Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.351 )
layers = 32768
cast_shadow = 0
generate_lightmap = false
mesh = ExtResource( 3 )
skeleton = NodePath("../../../Camera")
material/0 = ExtResource( 2 )

[node name="WaterDepthPass_Viewport" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
render_target_clear_mode = 2
render_target_update_mode = 3
gui_disable_input = true
shadow_atlas_quad_0 = 0
shadow_atlas_quad_1 = 0
shadow_atlas_quad_2 = 0
shadow_atlas_quad_3 = 0

[node name="WaterDepthPass_Camera" type="Camera" parent="WaterDepthPass_Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cull_mask = 1015807
near = 0.35
far = 1000.0

[node name="WaterDepthPass_RT" type="MeshInstance" parent="WaterDepthPass_Viewport/WaterDepthPass_Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.351 )
layers = 65536
cast_shadow = 0
generate_lightmap = false
mesh = ExtResource( 3 )
skeleton = NodePath("../../../Camera")
material/0 = SubResource( 4 )
